[package]
name = "phdquestgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
nom = "7.1.3"
env_logger = { version = "0.10.0", features = ["color"] }
log = "0.4.19"
structopt = { version = "0.3.26", features = ["color"] }

[dev-dependencies]
test-log = "0.2.12"
